--- a/streamamg-sdk-playkit/src/main/res/values/strings.xml
+++ b/streamamg-sdk-playkit/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="empty_time">00:00</string>
+    <string name="empty_time">0:00</string>
     <string name="spoiler_free">Spoiler Free</string>
+    <string name="live">LIVE</string>
+    <string name="go_live">GO LIVE</string>
 </resources>
