--- a/streamamg-sdk-playkit/src/main/res/values/strings.xml
+++ b/streamamg-sdk-playkit/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="spoiler_free">Spoiler Free</string>
     <string name="live">LIVE</string>
     <string name="go_live">GO LIVE</string>
+    <string name="subtitle_off">Off</string>
 </resources>
